# tioeren

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  QA-TRACKER.md  SPEC.md  SPECIFIKATION_TODO.md  TODO.md  WORKFLOW-STATE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/agents/: backend-implementer.md  bug-investigator.md  frontend-implementer.md  qa-browser-tester.md  reviewer.md  security-tester.md
.claude/rules/: backend.md  coding-standards.md  frontend.md  gotchas.md  workflow.md
.devcontainer/: Dockerfile  devcontainer.json
alembic/: env.py
alembic/versions/: 1563556ba3ca_create_users_table.py  (+24 more)
api/: __init__.py  main.py
docker/: Caddyfile  api.Dockerfile  nginx.conf  ui.Dockerfile
docs/: MVP-HISTORY.md  SECURITY-AUDIT-2026-02-07.md
tests/: __init__.py  conftest.py  test_account_api.py  test_amount_overflow.py  test_amount_patterns.py  test_archived_budget_posts.py  test_auth_middleware.py  test_auth_routes.py  test_auth_service.py  test_bank_days.py  test_budget_api.py  test_budget_post_hierarchy.py  test_budget_post_occurrence_endpoints.py  test_budget_post_occurrences.py  test_budget_post_validation.py  test_category_api.py  test_category_model.py  test_container_api.py  test_dashboard.py  test_e2e_flows.py  test_forecast_endpoint.py  test_forecast_service.py  test_health.py  test_non_bank_days_api.py  test_recurrence_pattern.py  test_session_service.py  test_transaction_allocation_endpoint.py  test_transaction_allocation_model.py  test_transaction_endpoints.py
ui/: README.md  package-lock.json  package.json  svelte.config.js
ui/src/: app.css  (+1 more)
(+109 files in other folders)
