[project]
name = "tioeren"
version = "0.1.0"
description = "Personal finance management application"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.46",
    "psycopg[binary]>=3.3.2",
    "alembic>=1.18.3",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.22",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
]
security = [
    "semgrep>=1.0.0",
    "pip-audit>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
